Completed JavaDoc for GUIcontroller package